// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders danger variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-[10px] font-medium transition-colors disabled:opacity-50 disabled:pointer-events-none bg-error text-primary-fg hover:bg-error/90 h-9 px-4 text-sm"
    type="button"
  >
    删除
  </button>
</div>
`;

exports[`Button > renders default variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-[10px] font-medium transition-colors disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-fg hover:bg-primary/90 h-9 px-4 text-sm"
    type="button"
  >
    主按钮
  </button>
</div>
`;

exports[`Button > renders sm size 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center font-medium transition-colors disabled:opacity-50 disabled:pointer-events-none bg-primary text-primary-fg hover:bg-primary/90 h-8 px-3 text-sm rounded-lg"
    type="button"
  >
    小按钮
  </button>
</div>
`;
